force-app/main/default/objects/Promotion_Material_Item__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Activity is not active</errorMessage>
        <filterItems>
            <field>Promotion_Activity__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promotion_Activity__c</referenceTo>
    <relationshipLabel>Promotion Material Items</relationshipLabel>
    <relationshipName>Promotion_Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>