force-app/main/default/objects/Promotion_Material_Item__c/fields/Brand_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Status__c</fullName>
    <inlineHelpText>brand status placeholder</inlineHelpText>
    <label>Brand Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Stock</fullName>
            </value>
            <value>
                <fullName>May Stock</fullName>
            </value>
            <value>
                <fullName>Preferred Pouring</fullName>
            </value>
            <value>
                <fullName>Must Stock Pouring</fullName>
            </value>
            <value>
                <fullName>Preferred Premium</fullName>
            </value>
            <value>
                <fullName>By The Bottle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>