force-app/main/default/objects/Promotion_Material_Item__c/fields/Brand_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Brand_Visibility__c</fullName>
    <label>Brand Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand visibility in menus</fullName>
            </value>
            <value>
                <fullName>Fixed materials</fullName>
            </value>
            <value>
                <fullName>Temporary materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>