force-app/main/default/objects/Promotion_Material_Item__c/fields/Comments_Long__c.field-meta.xml
<CustomField>
    <fullName>Comments_Long__c</fullName>
    <label>Comments Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>