force-app/main/default/objects/Promotion_Material_Item__c/fields/Current_Volume_9L__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_9L__c</fullName>
    <formula>Current_Volume_Bottles__c * Product_Unit_Size__c / 9000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Volume 9L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>