force-app/main/default/objects/Promotion_Material_Item__c/fields/Current_Volume_Bottles__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_Bottles__c</fullName>
    <formula>Current_Volume__c * Product_Pack_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Volume Bottles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>