force-app/main/default/objects/Promotion_Material_Item__c/fields/Current_Volume_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_Gross_Profit__c</fullName>
    <formula>IF( Activity__r.Market_Name__c = &apos;Korea&apos;, Current_Volume_9L__c * Gross_Profit_per_Case_9L__c, Current_Volume__c * Gross_Profit_per_Case_9L__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Volume Gross Profit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>