force-app/main/default/objects/Promotion_Material_Item__c/fields/Drink_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Drink_Strategy__c</fullName>
    <label>Drink Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perfect Serve</fullName>
            </value>
            <value>
                <fullName>Menu - Outlet Creation</fullName>
            </value>
            <value>
                <fullName>Menu - First drink</fullName>
            </value>
            <value>
                <fullName>Menu - First in category</fullName>
            </value>
            <value>
                <fullName>Menu -American Whiskey section</fullName>
            </value>
            <value>
                <fullName>Online menu inclusion</fullName>
            </value>
            <value>
                <fullName>Online drink feature</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Christmas serve</fullName>
            </value>
            <value>
                <fullName>Jack &amp; Cola</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Apple Jack</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Godfather No.7</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Lynchburg Lemonade</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Old Fashioned</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Mr Jack Hard Shake</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Red Dog Smash</fullName>
            </value>
            <value>
                <fullName>Jack Daniel&#39;s Sour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>