force-app/main/default/objects/Promotion_Material_Item__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>