force-app/main/default/objects/Promotion_Material_Item__c/fields/Free_Goods_Given_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Goods_Given_Date__c</fullName>
    <label>Free Goods Given Date</label>
    <type>Date</type>
</CustomField>