force-app/main/default/objects/Promotion_Material_Item__c/fields/Free_Goods_Reason__c.field-meta.xml
<CustomField>
    <fullName>Free_Goods_Reason__c</fullName>
    <label>Free Goods Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Displays</fullName>
            </value>
            <value>
                <fullName>Account Events</fullName>
            </value>
            <value>
                <fullName>Anniversaries</fullName>
            </value>
            <value>
                <fullName>Activities to Consumers</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>