force-app/main/default/objects/Promotion_Material_Item__c/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <label>Listing Fee</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>