force-app/main/default/objects/Promotion_Material_Item__c/fields/Outlet_to_Provide__c.field-meta.xml
<CustomField>
    <fullName>Outlet_to_Provide__c</fullName>
    <label>Outlet to Provide</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media Posting</fullName>
            </value>
            <value>
                <fullName>Quarterly Sales Data</fullName>
            </value>
            <value>
                <fullName>Activity Sales Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>