force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_PSA_GP_net_of_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Plan_PSA_GP_net_of_Total_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plan PSA GP net of Total Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>