force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_PSA_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Plan_PSA_Gross_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plan PSA Gross Profit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>