force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rebate__c</fullName>
    <label>Plan Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>