force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_Rebate_Liability__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rebate_Liability__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plan Rebate Liability</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>