force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_Rebate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rebate_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plan Rebate %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>