force-app/main/default/objects/Promotion_Material_Item__c/fields/Plan_Volume__c.field-meta.xml
<CustomField>
    <fullName>Plan_Volume__c</fullName>
    <label>Plan Volume</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>