force-app/main/default/objects/Promotion_Material_Item__c/fields/Product_Custom__c.field-meta.xml
<CustomField>
    <fullName>Product_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NPA Rollout: Used to store the related Product. /* API name need to be changed to Product__c after Product remediation*/</description>
    <label>Product Name</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Promotion Material Items</relationshipLabel>
    <relationshipName>Promotion_Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>