force-app/main/default/objects/Promotion_Material_Item__c/fields/Product_Gross_Profit_per_Bottle__c.field-meta.xml
<CustomField>
    <fullName>Product_Gross_Profit_per_Bottle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Gross Profit per Bottle</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>