force-app/main/default/objects/Promotion_Material_Item__c/fields/Product_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Visibility__c</fullName>
    <label>Product Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display Brown-Forman brands in bar and counter bar</fullName>
            </value>
            <value>
                <fullName>Other exhibitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>