force-app/main/default/objects/Promotion_Material_Item__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <description>Infowelders: Used by CRM.
		NPA Rollout: Used to refer to Promotion.</description>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Promotion Material Items</relationshipLabel>
    <relationshipName>Promotion_Material_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>