force-app/main/default/objects/Promotion_Material_Item__c/fields/Promotional_Activity__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Activity__c</fullName>
    <label>Promotional Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point of Sale</fullName>
            </value>
            <value>
                <fullName>Sampling Activity</fullName>
            </value>
            <value>
                <fullName>Staff Incentive</fullName>
            </value>
            <value>
                <fullName>Timebound Activation</fullName>
            </value>
            <value>
                <fullName>Permanent Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>