force-app/main/default/objects/Promotion_Material_Item__c/fields/Promotional_Activity_Value__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Activity_Value__c</fullName>
    <label>Promotional Activity Value</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>