force-app/main/default/objects/Promotion_Material_Item__c/fields/PSA_Free_Bottle_Cost__c.field-meta.xml
<CustomField>
    <fullName>PSA_Free_Bottle_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PSA Free Bottle Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>