force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Actual Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>