force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Actual_Discount_Bottles__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Discount_Bottles__c</fullName>
    <formula>Total_Actual_Volume_Bottles__c * Plan_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Discount Bottles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>