force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Actual_Free_Bottle_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Free_Bottle_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Actual Free Bottle Qty</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>