force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Actual_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Investment__c</fullName>
    <formula>(Total_Actual_Volume__c * Plan_Rebate__c) + Listing_Fee__c + Promotional_Activity_Value__c + Training_and_Advocacy_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>