force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Volume__c</fullName>
    <label>Total Actual Volume</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>