force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <formula>( Plan_Volume__c *  Plan_Rebate__c ) + Listing_Fee__c + Promotional_Activity_Value__c + Training_and_Advocacy_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>