force-app/main/default/objects/Promotion_Material_Item__c/fields/Total_Listing_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Listing_Fee_Paid__c</fullName>
    <label>Total Listing Fee Paid</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>