force-app/main/default/objects/Promotion_Material_Item__c/fields/Training_and_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Advocacy__c</fullName>
    <label>Training and Advocacy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category Training</fullName>
            </value>
            <value>
                <fullName>Product Training</fullName>
            </value>
            <value>
                <fullName>Cocktail Training</fullName>
            </value>
            <value>
                <fullName>Bespoke Training</fullName>
            </value>
            <value>
                <fullName>Bespoke Advocacy Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>