force-app/main/default/objects/Promotion_Material_Item__c/fields/Training_and_Advocacy_Value__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Advocacy_Value__c</fullName>
    <label>Training and Advocacy Value</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>