force-app/main/default/objects/Promotion_Material_Item__c/recordTypes/KR_PSA.recordType-meta.xml
<RecordType>
    <fullName>KR_PSA</fullName>
    <active>true</active>
    <description>Korea PSA</description>
    <label>KR - PSA</label>
</RecordType>