force-app/main/default/objects/Promotion_Material_Item__c/recordTypes/MX_PSA.recordType-meta.xml
<RecordType>
    <fullName>MX_PSA</fullName>
    <active>true</active>
    <label>MX - PSA</label>
</RecordType>